<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameFragment"
    android:foregroundGravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/white">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/Wins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:padding="5dp"
                android:text="@string/wins"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Losses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:padding="5dp"
                android:text="@string/losses"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:padding="5dp"
                android:text="Switch"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Wins_After_Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="40dp"
                android:layout_row="1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Losses_After_Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="50dp"
                android:layout_row="1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Stay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:padding="5dp"
                android:text="@string/stay"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Wins_After_Stay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="40dp"
                android:layout_row="2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Losses_After_Stay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="50dp"
                android:layout_row="2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:padding="5dp"
                android:text="@string/total"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Total_Wins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="40dp"
                android:layout_row="3"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Total_Losses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="3"
                android:layout_marginStart="50dp"
                android:textSize="14sp"/>

        </GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_a_door"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <include
                android:id="@+id/door_images"
                layout="@layout/doors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            >
            <Button
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:background="@color/green"
                android:layout_marginEnd="5dp"
                android:visibility="invisible"
                />

            <Button
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:textColor="@android:color/white"
                android:text="@string/no"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:visibility="invisible"
             />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/play_again"
                android:textSize="14sp"
                android:text="@string/play_again"
                android:textColor="@android:color/white"
                android:background="@android:color/black"
                android:padding="5dp"
                android:visibility="invisible"/>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>